--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "mysql": "^2.16.0"
   },
   "devDependencies": {
