--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rbi-node-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
@@ -27,5 +27,8 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
+  },
+  "engines": {
+    "node": "8.11.4"
   }
 }
