--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "rbi-node-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/graphql_server.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "npm run graphql",
+    "rest": "node src/index.js",
     "graphql": "node src/graphql_server.js",
     "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "git push heroku master"
   },
   "repository": {
     "type": "git",
