--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
   "homepage": "https://github.com/UpToEleven1102/RBI-node-backend#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.2",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "graphql-yoga": "^1.17.4",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "puppeteer": "^1.13.0",
+    "request-promise": "^4.2.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
