add request package

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "graphql-yoga": "^1.17.4",
     "mysql": "^2.16.0",
     "puppeteer": "^1.13.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
   "devDependencies": {
